tidy up gradle stuff